macro(prepend listVar prefix)
   set(${listVar} "")
   foreach(item ${ARGN})
      list(APPEND ${listVar} ${prefix}${item})
   endforeach(item)
endmacro(prepend)

set(tlocposix_headers socket.h thread.h)
set(tlocposix_sources socket.c thread.c)
prepend(tlocposix_headers ${PROJECT_SOURCE_DIR}/include/tlo/ ${tlocposix_headers})
add_library(tlocposix STATIC ${tlocposix_headers} ${tlocposix_sources})
target_include_directories(tlocposix PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_compile_definitions(tlocposix PUBLIC _POSIX_C_SOURCE=200809L)
target_link_libraries(tlocposix PUBLIC Threads::Threads)
