macro(prepend listVar prefix)
   set(${listVar} "")
   foreach(item ${ARGN})
      list(APPEND ${listVar} ${prefix}${item})
   endforeach(item)
endmacro(prepend)

if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU" OR
    "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
  if (TLOCPOSIX_USE_ASAN)
    set(sanitizer_compile_options -fsanitize=address -fsanitize=undefined -O1 -fno-omit-frame-pointer -fno-optimize-sibling-calls)
    set(sanitizer_link_options -fsanitize=address)
  elseif(TLOCPOSIX_USE_MSAN)
    set(sanitizer_compile_options -fsanitize=memory -fsanitize=undefined -O1 -fno-omit-frame-pointer -fno-optimize-sibling-calls)
    set(sanitizer_link_options -fsanitize=memory)
  endif()
endif()

set(tlocposix_headers socket.h thread.h)
set(tlocposix_sources socket.c thread.c)
prepend(tlocposix_headers ${PROJECT_SOURCE_DIR}/include/tlo/ ${tlocposix_headers})
add_library(tlocposix STATIC ${tlocposix_headers} ${tlocposix_sources})
set_target_properties(tlocposix PROPERTIES C_EXTENSIONS OFF)
target_compile_features(tlocposix PUBLIC c_std_11)
target_compile_options(tlocposix PRIVATE ${warning_compile_options} -Wno-cast-align PUBLIC ${sanitizer_compile_options})
target_include_directories(tlocposix PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_compile_definitions(tlocposix PUBLIC _POSIX_C_SOURCE=200809L)
target_link_libraries(tlocposix PUBLIC Threads::Threads ${sanitizer_link_options})
